# FileDialog

./: CMakeLists.txt  README.md
examples/: Main.qml  main.cpp
resources/: fileDialogRc.qrc  resources.qrc
src/c++/: filesmanager.cpp  filesmanager.h  register.cpp  register.h  sortedmodel.cpp  sortedmodel.h
src/c++/types/: filenode.h
src/c++/utils/: filesutils.cpp  filesutils.h
src/qml/: FileDialog.qml  fileDialogQml.qrc  qml.qrc
